@@ -55,6 +55,8 @@ NOCC 1.3    ?? ??, 200?
     * Patch #1537220 : LANG and THEME may change also pop users (Vadim).
 
   Feature Requests
+    * RFE #1578965 : Improve check.php: use CSS to style and output complete
+      page (Arnaud Boudou).
     * RFE #1227895 : Address Translation (Tim Gerundt).
     * RFE #473980  : Caching of folder contents (Arnaud Boudou).
 
